# Ourgit

./: .gitignore  CMakeLists.txt  README.md
cli/: main.cpp
core/include/: Blob.hpp  Commit.hpp  Index.hpp  OurGitObject.hpp  Repository.hpp  Tree.hpp
core/src/: Blob.cpp  Commit.cpp  Index.cpp  OurGitObject.cpp  Repository.cpp  Tree.cpp
tests/: main.cpp
